--- a/index.html
+++ b/index.html
@@ -41047,7 +41047,7 @@
             <div class="nav-buttons">
                 <button onclick="resetQuiz()" 
                         class="nav-btn danger">
-                    Reset Progress
+                    Finished
                 </button>
                 <button onclick="showHistory()" 
                         class="nav-btn secondary">
@@ -41349,6 +41349,12 @@
                 showHistory();
             }
         }
+
+        // Tìm và thay thế text của nút Save&New
+        document.querySelector('.nav-header').innerHTML = document.querySelector('.nav-header').innerHTML.replace(
+            'Save&amp;New',
+            'Save + New'
+        );
     </script>
 </body>
 </html>
