--- a/index.html
+++ b/index.html
@@ -41983,7 +41983,7 @@
                                id="q293_B">
                         <label class="choice-label" for="q293_B">
                             <span class="choice-marker">B</span>
-                            <span class="choice-text">1. Use Vertex AI Experiments to evaluate model performance during training. 2. Register your model in Vertex AI Model Registry. 3. Generate batch predictions in Vertex A</span>
+                            <span class="choice-text">1. Use Vertex AI Experiments to evaluate model performance during training. 2. Register your model in Vertex AI Model Registry. 3. Generate batch predictions in Vertex AI</span>
                         </label>
                     </div>
                 
@@ -41994,7 +41994,7 @@
                                id="q293_C">
                         <label class="choice-label" for="q293_C">
                             <span class="choice-marker">C</span>
-                            <span class="choice-text">2. Create a Vertex AI managed dataset. 2. Use a Vertex AI training pipeline to train your model. 3. Generate batch predictions in Vertex A</span>
+                            <span class="choice-text">2. Create a Vertex AI managed dataset. 2. Use a Vertex AI training pipeline to train your model. 3. Generate batch predictions in Vertex AI</span>
                         </label>
                     </div>
                 
