--- a/index.html
+++ b/index.html
@@ -22373,7 +22373,7 @@
                 </div>
             
 
-                <div class="question" id="q143" data-correct="C">
+                <div class="question" id="q143" data-correct="D">
                     <div class="question-inner">
                         <div class="question-header">
                             <div class="question-header-content">
